2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Compare feature file entries on the name of the
	program unit. Relax an overly aggressive warning to remove
	false positives.

2017-01-10  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Use strings instead of UUIDs as identifiers.

2016-11-28  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Comment out -fsection-anchors and
	-ftree-coalesce-inlined-vars flags.
	* Parameters.h: Likewise.

2016-10-25  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp (loadFeatureIDs): Handle additional feature_class
	entry in csv file containing feature set identifiers.
	(main): When optimizing, only use the features which are classified
	as module features by the feature class.

2016-09-22  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Use getFeatureGroupFeatures instead of getFeatures.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Pass the command used to compile modules and
	functions to Database::newCompilation.

2016-09-21  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Generate compilation ids for functions as well as
	modules.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Use -mageec-gcc to replace the original command word

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Remove -mageec-config option, and add
	-mageec-features and -mageec-out options.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Add -mageec-gcc option to specify the command to
	invoke gcc.

2016-09-19  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Refactor. Add ability to optimize using a selected
	machine learner.

2016-08-23  Edward Jones  <ed.jones@embecosm.com>

	* Driver.cpp: Reimplement driver so that it's interface matches
	that of gcc

2016-08-16  Edward Jones  <ed.jones@embecosm.com>

	* CMakeLists.txt: Rename gcc_driver target executable to mageec-gcc

2016-08-16  Edward Jones  <ed.jones@embecosm.com>
