@@ -829,13 +829,11 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-fbtr-bb-exclusive",                   FlagParameterID::kBTRBBExclusive},
   {"-fcaller-saves",                       FlagParameterID::kCallerSaves},
   {"-fcombine-stack-adjustments",          FlagParameterID::kCombineStackAdjustments},
-  {"-fcommon",                             FlagParameterID::kCommon},
   {"-fcompare-elim",                       FlagParameterID::kCompareElim},
   {"-fconserve-stack",                     FlagParameterID::kConserveStack},
   {"-fcprop-registers",                    FlagParameterID::kCPropRegister},
   {"-fcrossjumping",                       FlagParameterID::kCrossJumping},
   {"-fcse-follow-jumps",                   FlagParameterID::kCSEFollowJumps},
-  {"-fdata-sections",                      FlagParameterID::kDataSections},
   {"-fdce",                                FlagParameterID::kDCE},
   {"-fdefer-pop",                          FlagParameterID::kDeferPop},
   {"-fdelete-null-pointer-checks",         FlagParameterID::kDeleteNullPointerChecks},
@@ -906,7 +904,6 @@ static const auto &flag_to_parameter = *new std::map<std::string, unsigned>({
   {"-fshrink-wrap",                        FlagParameterID::kShrinkWrap},
   {"-fsplit-ivs-in-unroller",              FlagParameterID::kSplitIVsInUnroller},
   {"-fsplit-wide-types",                   FlagParameterID::kSplitWideTypes},
-  {"-fstrict-aliasing",                    FlagParameterID::kStrictAliasing},
   {"-fthread-jumps",                       FlagParameterID::kThreadJumps},
   {"-ftoplevel-reorder",                   FlagParameterID::kTopLevelReorder},
   {"-ftree-bit-ccp",                       FlagParameterID::kTreeBitCCP},
